<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:appbrain="http://schemas.android.com/apk/lib/com.appbrain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/before_start"
            android:textSize="12pt" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/description"
            android:textSize="8pt" />

        <LinearLayout
            android:id="@+id/overlay_pref"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/overlay"
                android:textSize="10pt" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/overlay_description"
                android:textSize="8pt" />

            <Button
                android:id="@+id/allow_overlay"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#aaaaff"
                android:text="@string/confirm" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/access_pref"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/access"
                android:textSize="10pt" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/access_description"
                android:textSize="8pt" />

            <Button
                android:id="@+id/allow_access"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#aaaaff"
                android:text="@string/confirm2" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
