<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:appbrain="http://schemas.android.com/apk/lib/com.appbrain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarStyle="outsideOverlay"
        android:scrollbars="vertical">

        <LinearLayout
            android:id="@+id/setting_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10pt"
            android:background="#ffffff"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10pt"
                android:background="@drawable/gray_button"
                android:clickable="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5pt"
                    android:background="#ffffff"
                    android:gravity="center"
                    android:text="@string/delay_setting"
                    android:textColor="#5555ff"
                    android:textSize="12pt" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5pt"
                        android:gravity="center"
                        android:text="@string/delay_before_click"
                        android:textColor="#555555"
                        android:textSize="8pt" />

                    <EditText
                        android:id="@+id/edt_before"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:gravity="center"
                        android:inputType="number"
                        android:text="0"
                        android:textColor="#555555"
                        android:textSize="8pt" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginTop="7dp"
                        android:layout_marginRight="7dp"
                        android:gravity="center"
                        android:text="ms"
                        android:textColor="#555555"
                        android:textSize="8pt" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5pt"
                        android:text="@string/delay_after_click"
                        android:textColor="#555555"
                        android:textSize="8pt" />

                    <EditText
                        android:id="@+id/edt_after"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:gravity="center"
                        android:inputType="number"
                        android:text="0"
                        android:textColor="#555555"
                        android:textSize="8pt" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginTop="7dp"
                        android:layout_marginRight="7dp"
                        android:gravity="center"
                        android:text="ms"
                        android:textColor="#555555"
                        android:textSize="8pt" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_initialize"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:text="@string/delay_initialize" />

                    <Button
                        android:id="@+id/btn_initialize_all"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:text="@string/delay_initialize_all"
                        android:textColor="#bb3333" />
                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5pt"
                    android:layout_weight="0.5"
                    android:clickable="true"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/lyt_ok"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/gray_button"
                        android:gravity="center">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_alignParentLeft="true"
                                    android:layout_alignParentTop="true"
                                    android:gravity="center"
                                    android:text="@string/ok"
                                    android:textColor="#aaaaaa"
                                    android:textSize="12pt" />
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/lyt_no"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/gray_button"
                        android:gravity="center">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:gravity="center"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_alignParentLeft="true"
                                    android:layout_alignParentTop="true"
                                    android:gravity="center"
                                    android:text="@string/cancel"
                                    android:textColor="#aaaaaa"
                                    android:textSize="12pt" />
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
